<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:theme="@style/AppTheme.presentation"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/presentation_arrow"
            android:src="@drawable/left_arrow"
            android:layout_width="50dp"
            android:layout_marginLeft="10dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/presentation_university"
            android:text="@string/presentation_university"
            style="@style/AppTheme.presentation"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/presentation_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/presentation_faculty"
            android:text="@string/presentation_faculty"
            style="@style/AppTheme.presentation"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/presentation_university"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/presentation_subject"
            android:text="@string/presentation_subject"
            style="@style/AppTheme.presentation"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/presentation_faculty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/presentation_project"
            android:text="@string/presentation_project"
            style="@style/AppTheme.presentation"
            app:layout_constraintTop_toBottomOf="@+id/presentation_subject"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/presentation_members"
            android:text="@string/presentation_members"
            style="@style/AppTheme.presentation"
            app:layout_constraintTop_toBottomOf="@+id/presentation_project"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/presentation_students"
            android:text="@string/presentation_students"
            android:layout_marginTop="10dp"
            style="@style/AppTheme.presentation"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@+id/presentation_members"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/presentation_teacher"
            android:text="@string/presentation_teacher"
            style="@style/AppTheme.presentation"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@+id/presentation_students"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/presentation_teacher_name"
            android:text="@string/presentation_teacher_name"
            android:layout_marginTop="10dp"
            style="@style/AppTheme.presentation"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@+id/presentation_teacher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:text="@string/presentation_button"
            style="@style/AppTheme.button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>