<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/main_title"
            android:textColor="@color/colorDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textSize="30dp"
            android:layout_marginTop="60dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:id="@+id/main_image"
            android:src="@drawable/landing"
            android:layout_marginTop="40dp"
            android:layout_width="350dp"
            android:layout_height="300dp"
            app:layout_constraintTop_toBottomOf="@+id/main_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/main_desc"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_desc"
            android:gravity="center_horizontal"
            android:textSize="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_image"/>

    <Button
            android:id="@+id/main_button"
            android:text="@string/main_button"
            style="@style/AppTheme.button"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/main_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/main_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colorLink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>