<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResultActivity">


    <!-- Header -->

    <ImageView
            android:id="@+id/result_arrow"
            android:src="@drawable/left_arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/result_title"
            android:text="@string/result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textColor="@color/colorDark"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Date and Hour-->
    <TextView
            android:id="@+id/result_date"
            android:text="@string/result_date"
            android:textColor="@color/colorDark"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/result_title"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/result_date_text"
            android:text="3/10/2020"
            android:textColor="@color/colorDark"
            android:textSize="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/result_title"
            app:layout_constraintStart_toEndOf="@id/result_date"/>

    <TextView
            android:id="@+id/result_time"
            android:text="@string/result_time"
            android:textColor="@color/colorDark"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/result_date"
            app:layout_constraintEnd_toEndOf="@+id/result_date"/>

    <TextView
            android:id="@+id/result_time_text"
            android:text="4:23 P.M."
            android:textColor="@color/colorDark"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/result_date"
            app:layout_constraintStart_toEndOf="@id/result_time"/>

    <!-- Footer-->

    <TextView
            android:id="@+id/result_total"
            android:text="@string/result_total"
            android:textColor="@color/colorDark"
            android:textStyle="bold"
            android:textSize="24dp"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/result_total_text"
            app:layout_constraintBottom_toTopOf="@+id/code_layout"/>

    <TextView
            android:id="@+id/result_total_text"
            android:text="B/. 34.25"
            android:textColor="@color/colorDark"
            android:textSize="24dp"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/code_layout"/>


    <LinearLayout
            android:id="@+id/code_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/result_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:id="@+id/result_code"
                android:text="@string/result_code"
                android:textColor="@color/colorDark"
                android:textStyle="bold"
                android:textSize="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/result_code_text"
                android:text="234234"
                android:textColor="@color/colorDark"
                android:textSize="24dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
            android:id="@+id/result_button"
            android:text="@string/result_button"
            style="@style/AppTheme.button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>