<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.ricardocuan.proyecto1.PrincipalActivity">

<!--    HEADER-->
    <ImageView
            android:id="@+id/principal_arrow"
            android:src="@drawable/left_arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/principal_title"
            android:text="@string/principal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textColor="@color/colorDark"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



    <!-- Lista -->
    <ScrollView
            android:id="@+id/svcombo"
            android:background="@color/colorLight"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/principal_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent
"           app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/principal_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                    android:id="@id/combo_title"
                    android:text="@string/principal_combo_title"
                    android:textColor="@color/colorDark"
                    android:textSize="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="20dp"
                    app:layout_constraintTop_toBottomOf="@id/principal_title"
                    app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                    android:id="@+id/combo_list"
                    android:background="@color/colorLight"
                    android:layout_width="match_parent"
                    app:layout_constraintVertical_weight="1"
                    android:orientation="vertical"
                    android:layout_height="match_parent">
            </LinearLayout>

            <TextView
                    android:id="@id/individual_title"
                    android:text="@string/principal_single_title"
                    android:textColor="@color/colorDark"
                    android:textSize="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:layout_marginLeft="20dp"/>
            <LinearLayout
                    android:id="@+id/individual_list"
                    android:background="@color/colorLight"
                    android:layout_width="match_parent"
                    app:layout_constraintVertical_weight="1"
                    android:orientation="vertical"
                    android:layout_height="match_parent">
            </LinearLayout>
            <ImageView
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/landing"
                    android:layout_width="200dp"
                    android:layout_height="200dp"/>
        </LinearLayout>
    </ScrollView>



<!--     Botón Principal-->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/principal_button_container"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
                android:src="@drawable/shopping"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        <TextView
                android:id="@+id/principal_button"
                android:text="@string/principal_button"
                android:textStyle="bold"
                android:textSize="24dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/colorLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/principal_result"
                android:text="B/. 0.00"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/colorLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>